[package]
name = "iris"
version = "0.1.0"
authors = ["Tatsuyuki Ishi <ishitatsuyuki@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { path = "../amethyst", default-features = false }
failure = "0.1.5"
lazy_static = "1.3.0"
glsl-layout = "0.3.0"

[features]
default = ["amethyst/animation", "amethyst/renderer", "amethyst/vulkan", "amethyst/nightly"]

[profile.dev]
opt-level = 1
debug = 1